# Gideon

./: README.md  boss.py  config.py  pyproject.toml  requirements.txt  watcher.py
agents/: __init__.py  cleaner.py  dashboard_gen.py  deployer.py  evaluator.py  feature_eng.py  ingestor.py  monitor.py  trainer.py
artifacts/: .gitignore
dashboard/: app.py
gideon/: README.md  __init__.py  boss.py  config.py  watcher.py
gideon/agents/: __init__.py  cleaner.py  dashboard_gen.py  deployer.py  evaluator.py  feature_eng.py  ingestor.py  trainer.py
gideon/dashboard/: app.py
inbox/: .gitignore
logs/: monitor.json  prev_column_stats.json  runs.jsonl
