[project]
name = "gideon"
version = "0.1.0"
description = "Gideon — a local, zero-cloud automated ML pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data stack
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",      # fast, typed Parquet artifacts exchanged between agents
    # Modeling
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",        # model (de)serialization
    # Orchestration / triggering
    "watchdog>=3.0",      # inbox/ file watcher
    # Dashboard
    "streamlit>=1.30",
    "plotly>=5.18",       # interactive charts in the dashboard
]

# This is an application, not an importable library — tell uv not to build/install
# the project itself, just manage its dependencies in the virtual environment.
[tool.uv]
package = false
